After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695591 - [PATCH] Fix typos
[PATCH] Fix typos
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
0.20.x
Other Linux
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-10 22:23 UTC by Benjamin Kerensa
Modified: 2013-03-11 09:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix typos (4.26 KB, patch)
2013-03-10 22:23 UTC, Benjamin Kerensa
none Details | Review
patch with attribution (2.49 KB, patch)
2013-03-10 23:40 UTC, Benjamin Kerensa
committed Details | Review

Description Benjamin Kerensa 2013-03-10 22:23:11 UTC
I found a few typos in the GuPnP package and have fixed them with the attached patch.
Comment 1 Benjamin Kerensa 2013-03-10 22:23:41 UTC
Created attachment 238547 [details] [review]
Patch to fix typos
Comment 2 Benjamin Kerensa 2013-03-10 22:23:56 UTC
diff --git a/libgupnp/gupnp-service-introspection.c b/libgupnp/gupnp-service-introspection
index e3335f3..ebcc7a2 100644
--- a/libgupnp/gupnp-service-introspection.c
+++ b/libgupnp/gupnp-service-introspection.c
@@ -445,7 +445,7 @@ set_variable_type (GUPnPServiceStateVariableInfo *variable,
         }
 
         if (type == G_TYPE_INVALID) {
-                g_warning ("Unkown type '%s' in the SCPD", data_type);
+                g_warning ("Unknown type '%s' in the SCPD", data_type);
                 return FALSE;
         }
 
@@ -851,7 +851,7 @@ state_variable_search_func (GUPnPServiceStateVariableInfo *variable,
 /**
  * gupnp_service_introspection_get_state_variable:
  * @introspection: A #GUPnPServiceIntrospection
- * @variable_name: The name of the variable to retreive
+ * @variable_name: The name of the variable to retrieve
  *
  * Returns the state variable by the name @variable_name in this service.
  *
@@ -888,7 +888,7 @@ action_search_func (GUPnPServiceActionInfo *action,
 /**
:...skipping...
diff --git a/libgupnp/gupnp-service-introspection.c b/libgupnp/gupnp-service-introspection.c
index e3335f3..ebcc7a2 100644
--- a/libgupnp/gupnp-service-introspection.c
+++ b/libgupnp/gupnp-service-introspection.c
@@ -445,7 +445,7 @@ set_variable_type (GUPnPServiceStateVariableInfo *variable,
         }
 
         if (type == G_TYPE_INVALID) {
-                g_warning ("Unkown type '%s' in the SCPD", data_type);
+                g_warning ("Unknown type '%s' in the SCPD", data_type);
                 return FALSE;
         }
 
@@ -851,7 +851,7 @@ state_variable_search_func (GUPnPServiceStateVariableInfo *variable,
 /**
  * gupnp_service_introspection_get_state_variable:
  * @introspection: A #GUPnPServiceIntrospection
- * @variable_name: The name of the variable to retreive
+ * @variable_name: The name of the variable to retrieve
  *
  * Returns the state variable by the name @variable_name in this service.
  *
@@ -888,7 +888,7 @@ action_search_func (GUPnPServiceActionInfo *action,
 /**
  * gupnp_service_introspection_get_action:
  * @introspection: A #GUPnPServiceIntrospection
- * @action_name: The name of the action to retreive
+ * @action_name: The name of the action to retrieve
  *
  * Returns the action by the name @action_name in this service.
  *
diff --git a/libgupnp/gupnp-service.c b/libgupnp/gupnp-service.c
index e50f1fa..2c4fd45 100644
--- a/libgupnp/gupnp-service.c
+++ b/libgupnp/gupnp-service.c
@@ -491,7 +491,7 @@ gupnp_service_action_get_value (GUPnPServiceAction *action,
         }
 
         if (!found)
-                g_warning ("Failed to retreive '%s' argument of '%s' action",
:...skipping...
diff --git a/libgupnp/gupnp-service-introspection.c b/libgupnp/gupnp-service-introspection.c
index e3335f3..ebcc7a2 100644
--- a/libgupnp/gupnp-service-introspection.c
+++ b/libgupnp/gupnp-service-introspection.c
@@ -445,7 +445,7 @@ set_variable_type (GUPnPServiceStateVariableInfo *variable,
         }
 
         if (type == G_TYPE_INVALID) {
-                g_warning ("Unkown type '%s' in the SCPD", data_type);
+                g_warning ("Unknown type '%s' in the SCPD", data_type);
                 return FALSE;
         }
 
@@ -851,7 +851,7 @@ state_variable_search_func (GUPnPServiceStateVariableInfo *variable,
 /**
  * gupnp_service_introspection_get_state_variable:
  * @introspection: A #GUPnPServiceIntrospection
- * @variable_name: The name of the variable to retreive
+ * @variable_name: The name of the variable to retrieve
  *
  * Returns the state variable by the name @variable_name in this service.
  *
@@ -888,7 +888,7 @@ action_search_func (GUPnPServiceActionInfo *action,
 /**
  * gupnp_service_introspection_get_action:
  * @introspection: A #GUPnPServiceIntrospection
- * @action_name: The name of the action to retreive
+ * @action_name: The name of the action to retrieve
  *
  * Returns the action by the name @action_name in this service.
  *
diff --git a/libgupnp/gupnp-service.c b/libgupnp/gupnp-service.c
index e50f1fa..2c4fd45 100644
--- a/libgupnp/gupnp-service.c
+++ b/libgupnp/gupnp-service.c
@@ -491,7 +491,7 @@ gupnp_service_action_get_value (GUPnPServiceAction *action,
         }
 
         if (!found)
-                g_warning ("Failed to retreive '%s' argument of '%s' action",
+                g_warning ("Failed to retrieve '%s' argument of '%s' action",
Comment 3 Jens Georg 2013-03-10 22:40:26 UTC
Thank you very much. Could you please regenerate the patch wit git format-patch? this way you'll keep the attribution. Thank you.
Comment 4 Benjamin Kerensa 2013-03-10 23:40:27 UTC
Created attachment 238550 [details] [review]
patch with attribution

Here you go
Comment 5 Jens Georg 2013-03-11 09:24:14 UTC
Thanks.