Fix Typos

https://bugzilla.gnome.org/show_bug.cgi?id=695591